# Project-Tachyon

./: .gitattributes  .gitignore  127.0.0.1:7891  Cargo.toml  README.md
.cargo/: config
.github/: semantic.yml
.github/workflows/: cargo.yml  clippy.yml  coverage.yml  fmt.yml  manual.yml  semantic.yml  tarpaulin.yml
entity/: Cargo.toml
entity/src/: category.rs  lib.rs  object.rs  project.rs  task.rs  task_discussion.rs  task_discussion_attachment.rs  task_user_assignment.rs  team.rs  team_member.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_object_table.rs  m20220101_000002_create_user_table.rs  m20220101_000003_create_task_table.rs  m20220101_000004_add_user_wrong_pass_attempt.rs  m20220101_000005_add_user_tsvector.rs  m20220101_000006_create_team_table.rs  m20220101_000007_create_team_member_table.rs  m20220101_000008_create_category_table.rs  m20220101_000009_create_project_table.rs  m20220101_000010_create_task_discussion_table.rs  m20220101_000011_create_task_user_assignment_table.rs  m20220101_000012_create_task_discussion_attachment_table.rs  m20220101_000013_add_task_description.rs  m20220101_000014_add_task_tsvector.rs
src/: main.rs
static/: logo
tachyon-core/: Cargo.toml
tachyon-core/misc/: config.toml
tachyon-core/src/: configs.rs  main.rs  session.rs  state.rs  utils.rs
tachyon-core/src/routers/: hello_world.rs  mod.rs  object.rs  status.rs
tachyon-core/src/routers/api/: hello_world.rs  mod.rs  object.rs  status.rs  task.rs  user.rs
tachyon-core/src/routers/view/: dashboard.rs  error.rs  hello.rs  mod.rs  object.rs  task.rs  user.rs
tachyon-core/src/test/: utils.rs
tachyon-docker/: Dockerfile  docker-compose.yml
tachyon-docker/env/: postgres.env
tachyon-frontend/: .gitignore  Cargo.toml  build.rs  gulpfile.js  package.json  tailwind.config.js  webpack.config.js
tachyon-frontend/src/: lib.rs  main.css  main.ts
tachyon-frontend/src/auth/: auth.ts
tachyon-frontend/src/view/: user_view.ts
tachyon-template/: Cargo.toml
tachyon-template/src/: error.rs  index.rs  lib.rs
tachyon-template/src/view/: dashboard.rs  mod.rs  object.rs  task.rs  user.rs
tachyon-template/templates/: error.stpl  header.stpl  hello.stpl  index.stpl
tachyon-template/templates/view/: dashboard.stpl  hbar.stpl  leftbar.stpl  object.stpl  task.stpl  task_detail.stpl  task_leftbar.stpl  user.stpl
tachyon-typescript/: Cargo.toml  build.rs  gulpfile.js  package.json  tsconfig.json
tachyon-typescript/src/: lib.rs
