[package]
name = "tachyon-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Utils
lazy_static = "1"
clap = {version = "3.1", features = ["derive", "wrap_help", "env", "unicode", "std", "color", "suggestions"]}
serde = {version = "1", features = ["derive", "unstable", "alloc", "rc"]}
async-trait = "0.1"
simd-json = "0.4"
mimalloc-rust = "0.1"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
uuid = { version = "0.8", features = ["serde", "v4"] }
toml = "0.5"
chrono = { version = "0.4", features = ["serde"] }
mime = "0.3"
rand = { version = "0.8", features = [
    "nightly", "simd_support", "serde", "getrandom", "alloc", "std", "std_rng"
]}
hashbrown = "0.12"
validator = { version = "0.14", features = ["derive", "phone", "card", "unic"] }

# Object Storage
sled = { version = "0.34"}

# Runtime
tokio = {version = "1.17", features = ["full"]}
tokio-uring = { version = "0.3", optional = true }
futures = {version = "0.3"}

# Server
actix = "0.13"
actix-web = { version = "4.0", features = ["rustls"] }
actix-server = { version = "2.1"}
actix-rt = { version = "2.7" }
actix-session = { version = "0.6", features = ["redis-rs-session"] }
actix-cors = { version = "0.6" }
actix-files = { git = "https://github.com/LGU-Web3-0/actix-web" }

# SQL
sea-query = { version = "0.23", features = [
    "derive",
    "thread-safe",
    "backend-postgres",
    "with-chrono",
    "with-time",
    "with-json",
    "with-rust_decimal",
    "with-uuid",
    "sqlx-postgres",
    "postgres",
    "postgres-array",
]}

entity = { path = "../entity" }
migration = { path = "../migration" }
tachyon-template = { path = "../tachyon-template" }
tachyon-frontend = { path = "../tachyon-frontend" }

#Test Specific
nix = { version = "0.23", optional = true }
serial_test = { version = "0.6", optional = true }
thirtyfour = { version = "0.28", optional = true,  default-features = false, features = ["reqwest-rustls-tls"]}

[dependencies.awc]
version = "3"
optional = true
features = ["rustls", "compress-brotli", "compress-gzip", "compress-zstd", "cookies", "trust-dns"]

[features]
integration-test = ["entity/test", "nix", "serial_test", "thirtyfour", "awc"]
io-uring = [
    "sled/io_uring",
    "actix-web/experimental-io-uring",
    "actix-server/io-uring",
    "actix-rt/io-uring",
    "actix-files/experimental-io-uring",
    "tokio-uring"
]

