[package]
name = "tachyon-template"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sailfish = "0.4.0"
async-trait = "0.1"
actix-web = { version = "4.0" }
md-5 = "0.10.1"
log = "0.4"
urlencoding = "2"
chrono = "0.4"
uuid = { version = "0.8", default-features = false}
ammonia = "3.2.0"
pulldown-cmark = "0.9.1"
[dev-dependencies]
tokio = { version = "1.17.0", features = ["full"] }
